# learning_langs_bioinfo

./: README.md
python/: pyproject.toml
python/biomodel/: #encoders.py#  encoders.py  encoders.py~  models.py  ref.py  test_encoding.py
python/biomodel/errors/: encoding.py
